# parameterize_kernel_specs

./: .gitignore  .prettierignore  MANIFEST.in  README.md  RELEASE.md  install.json  jupyter-kernel-specs-parametrized.md  jupyter-parameterized-kernel-specs.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
src/: index.tsx
style/: base.css
